feat: Improve auth with dedicated endpoints
